Fix text-align

--- a/MMM-homeassistant-sensors.css
+++ b/MMM-homeassistant-sensors.css
@@ -8,7 +8,6 @@
  *****************************************************/
 
 .ha-icon {
-  text-align: right;
   font-size: 20px;
 }
 
